@@ -718,6 +718,11 @@ static void ST_doPaletteStuff(void)
       palette = (cnt+7)>>3;
       if (palette >= NUMREDPALS)
         palette = NUMREDPALS-1;
+
+      /* cph 2006/08/06 - if in the menu, reduce the red tint - navigating to
+       * load a game can be tricky if the screen is all red */
+      if (menuactive) palette >>=1;
+
       palette += STARTREDPALS;
     }
   else
